fix(worker): run job handlers with a hard timeout
Handlers now execute on a separate executor with a configurable hard
timeout (auto-invoice.worker.handler-timeout, default 10m); a hung SMTP or
LibreNMS call no longer stalls the polling thread and the whole queue.

Co-Authored-By: Claude Haiku 4.5 (1M context) <noreply@anthropic.com>